--- a/TeacherDigitalAgency.csproj
+++ b/TeacherDigitalAgency.csproj
@@ -16,6 +16,9 @@
 
     <ItemGroup>
       <PackageReference Include="AntDesign" Version="0.16.3" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     </ItemGroup>
 
 </Project>
