--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MongoDb": "mongodb+srv://root:dirigocrew@tda-db.anoacqk.mongodb.net/?retryWrites=true&w=majority"
+  }
 }
