API v1.0 snad dokončeno

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDb": "mongodb+srv://root:dirigocrew@tda-db.anoacqk.mongodb.net/?retryWrites=true&w=majority"
+    "MongoDb": ""
   }
 }
