nic moc extra, jen hodně testování. Soubory Test05 a Test06 obsahují relevantní kód

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=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
+MONGODB_ATLAS_URI=mongodb+srv://root:dirigocrew@tda-db.anoacqk.mongodb.net/?retryWrites=true&w=majority
