--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "type": "module",
   "dependencies": {
+    "@langchain/cohere": "^0.0.2",
+    "@langchain/community": "^0.0.18",
     "dotenv": "^16.3.1",
-    "faiss-node": "^0.2.1",
-    "langchain": "^0.0.96",
+    "langchain": "^0.1.4",
     "mongodb": "^5.9.2",
-    "openai": "^3.3.0"
+    "openai": "^4.24.7"
   },
   "private": true,
   "devDependencies": {
